--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ arxiv
 PyMuPDF
 wikipedia
 langchain-text-splitters
+langchain-openai
+chromadb
+sentence_transformers
+langchain_huggingface
+faiss-cpu
+langchain_chroma
